add get entry api
