# src/app/api/llmapis/[id]/entries/[entryType]/[entryId]/route.ts
@@ -2,10 +2,20 @@
 import {interceptor} from "@/handler/server/interceptor";
 import {apiConfig} from "../../../../models";
 import {
-    apiDeleteEntry,
+    apiDeleteEntry, apiGetEntry,
     apiUpdateEntry
 } from "@/app/api/template";
 
+
+/**
+ * 更新条目
+ * @pathParams { id:string, entryId:number, entryType:string }
+ * @response any
+ * @openapi
+ */
+export const GET = interceptor.createRoute(
+    apiGetEntry(apiConfig)
+)
 /**
  * 更新条目
  * @pathParams { id:string, entryId:number, entryType:string }
