# src/app/api/stories/[id]/entries/[entryType]/[entryId]/route.ts
@@ -1,10 +1,19 @@
-
 import {interceptor} from "@/handler/server/interceptor";
 import {apiConfig} from "../../../../models";
 import {
-    apiDeleteEntry,
+    apiDeleteEntry, apiGetEntry,
     apiUpdateEntry
 } from "@/app/api/template";
+
+/**
+ * 更新条目
+ * @pathParams { id:string, entryId:number, entryType:string }
+ * @response any
+ * @openapi
+ */
+export const GET = interceptor.createRoute(
+    apiGetEntry(apiConfig)
+)
 
 /**
  * 更新条目
